<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vesc_can_control</name>
  <version>0.0.1</version>
  <description>ROS2 node for controlling VESC over CAN.</description>
  <maintainer email="info@cognipilot.com">Cogni</maintainer>
  <author email="info@cognipilot.com">Cogni</author>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>actuator_msgs</depend>
  <depend>can_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
